--- a/config/application.properties
+++ b/config/application.properties
@@ -18,3 +18,10 @@ spring.jpa.properties.hibernate.format_sql = true
 
 
 #debug = true
+
+
+#for files upload
+spring.servlet.multipart.max-file-size = 10MB
+spring.servlet.multipart.max-request-size = 10MB
+
+project.images = images/
