--- a/config/application.properties
+++ b/config/application.properties
@@ -18,6 +18,10 @@ spring.jpa.properties.hibernate.format_sql = true
 
 
 #debug = true
+logging.level.org.springframework.security = DEBUG
+spring.security.user.name = jyoti
+spring.security.user.password = joy123
+spring.security.user.roles = ADMIN
 
 
 #for files upload
